--- a/README.html
+++ b/README.html
@@ -4,9 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>András webes cuccai</h1>
+
+    <p id="desc">
+        Andrásról szoló leiras Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt tenetur aliquam, sapiente laboriosam autem fugiat itaque et obcaecati sunt debitis provident! Saepe facilis a totam. Eaque perspiciatis perferendis reprehenderit dicta!
+    </p>
+
+    <section>
+        <a id="section-div" class="vasand-kopapirollo" href="vasand_cuccai/hangman/main.html">
+            <div>
+                <h1>Kö, papir, olló</h1>
+            </div>
+        </a>
+        <a id="section-div" class="vasand-animacio" href="vasand_cuccai/animacio2/main.html">
+            <div>
+                <h1>Animáció</h1>
+            </div>
+        </a>
+        <a id="section-div" class="vasand-javadoga" href="vasand_cuccai/javascriptdolgozat/main.html">
+            <div>
+                <h1>JavaScript doga</h1>
+            </div>
+        </a>
+        <a id="section-div" class="vasand-csuszka" href="vasand_cuccai/csuszkaweb/main.html">
+            <div>
+                <h1>Csuszka</h1>
+            </div>
+        </a>
+        <a id="section-div" class="vasand-szemantikus" href="vasand_cuccai/szemantikusweboldal/main.html">
+            <div>
+                <h1>Szemantikus weboldal</h1>
+            </div>
+        </a>
+    </section>
 </body>
 </html>
